[gd_scene load_steps=3 format=3 uid="uid://b8m1n8h8wgn4b"]

[ext_resource type="Script" uid="uid://ym0yqqiul68c" path="res://scripts/ui/start_screen.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c3nfksh47g3u2" path="res://assets/ui/background_startmenu.png" id="2_m7t1o"]

[node name="StartScreen" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BackgroundTexture" type="TextureRect" parent="Panel/Background"]
modulate = Color(1, 1, 1, 0.29411766)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m7t1o")
expand_mode = 1
stretch_mode = 6

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -640.0
offset_right = 360.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150
alignment = 1

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "FIGHTER"
horizontal_alignment = 1

[node name="LibraryButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_stretch_ratio = 1.1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "LIBRARY"

[node name="SettingsButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_stretch_ratio = 1.1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="PlayButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_stretch_ratio = 0.96
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "PLAY"
